# ransac-cpp

./: CMakeLists.txt  README.md
include/ransac/: occu.hpp  plane.hpp  types.hpp
src/: main.cpp  occu.cpp  plane.cpp
